Fixed too long scroll when display products

--- a/scandiweb-frontend/src/components/Products.css
+++ b/scandiweb-frontend/src/components/Products.css
@@ -8,7 +8,6 @@
     margin: 120px 0;
     display: grid;
     grid-template-columns: 400px 400px 400px;
-    grid-template-rows: 450px 450px 450px;
     gap: 50px;
     justify-content: center;
     align-items: center;
